# OpenCLDualKernel

./: CMakeLists.txt  main.cpp
